# echolock

./: .gitignore  README.md  pyproject.toml
demo/: sample_app.py
src/echolock/: __init__.py  cli.py  decorator.py  diff.py  fingerprint.py  lockfile.py  tracer.py
tests/: test_fingerprint.py  test_lockfile.py  test_tracer.py
